Fixed search overflow. Added text input color variables.

--- a/src/styl/input/input.styl
+++ b/src/styl/input/input.styl
@@ -8,6 +8,8 @@
     padding: $input-padding;
     border-radius: $input-border-radius;
     border: $input-border-width solid $input-default-border-color;
+    background-color: $input-text-background-color;
+    color: $input-text-color;
     font-family: Arial;
     box-shadow: $input-box-shadow-height-0;
     // iOS specific fix
